change files names

--- a/files-html/promotions.html
+++ b/files-html/promotions.html
@@ -11,7 +11,7 @@
   <meta name="keywords"
     content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
   <meta name="robots" content="index, follow">
-  <link rel="icon" type="image/png" href="../grafika/others/favicon.png">
+  <link rel="icon" type="image/png" href="../graphics/others/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
@@ -29,7 +29,7 @@
 
     <!-- menu-mediaaa!!!!!!!!!!!!!!!!!!!!!! -->
     <div class="wrap-menu-media">
-      <div class="media-logo"><img src="../grafika/logo02.png" alt="logo beauty story"></div>
+      <div class="media-logo"><img src="../graphics/logo02.png" alt="logo beauty story"></div>
       <div class="menu-ham"><i class="fas fa-bars"></i>
         <i class="fas fa-times off"></i>
       </div>
