--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords"
     content="laserowe usuwanie tatuażu, mezoterapia igłowa, mezoterapia bezigłowa, kwasy i peeling chemiczny , fotoodmładzanie, przebarwienia skóry, usuwanie trądziku, karboksyterapia , zmarszczki | Kraków">
   <meta name="robots" content="index, follow">
-  <link rel="icon" type="image/png" href="grafika/others/favicon.png">
+  <link rel="icon" type="image/png" href="graphics/others/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
@@ -25,7 +25,7 @@
   <div class="wrap-all">
     <!-- menu-media !!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <div class="wrap-menu-media">
-      <div class="media-logo"><img src="grafika/logo02.png" alt="logo beauty story"></div>
+      <div class="media-logo"><img src="graphics/logo02.png" alt="logo beauty story"></div>
       <div class="menu-ham">
         <i class="fas fa-bars"></i>
         <i class="fas fa-times off"></i>
@@ -97,7 +97,7 @@
     </nav>
     <header class="header">
       <div class="header1">
-        <img src="grafika/pictures/kosmet1.jpg" alt="" class="bgd">
+        <img src="graphics/pictures/kosmet1.jpg" alt="" class="bgd">
         <div class="content">
           <h2>Beauty story</h2>
           <h3>"Twoje piękno pod najlepszą opieką"</h3>
@@ -109,7 +109,7 @@
       </div>
     </header>
     <section class="wrap-description">
-      <img src="grafika/logo.png" alt="beauty-story logo" class="desc-logo">
+      <img src="graphics/logo.png" alt="beauty-story logo" class="desc-logo">
       <p><span>Beauty Story</span> to profesjonalny zespół, wyjątkowa dbałość o bezpieczeństwo przeprowadzanych
         zabiegów, najlepszej jakości kosmetyki i certyfikowany sprzęt.
         <br>To wszystko razem oraz miła atmosfera, są
