chnage path file in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         zabiegów, najlepszej jakości kosmetyki i certyfikowany sprzęt.
         <br>To wszystko razem oraz miła atmosfera, są
         gwarancją efektywnych zabiegów i Twojego zadowolenia.</p>
-      <a href="files-html/o-nas.html"><button>Więcej o nas</button></a>
+      <a href="files-html/about.html"><button>Więcej o nas</button></a>
     </section>
     <section class="hit">
       <div class="wrap-hit">
