change of comments

--- a/files-html/treatments-description.html
+++ b/files-html/treatments-description.html
@@ -99,7 +99,7 @@
             class="fab fa-instagram"></i></a></div>
     </nav><a name="treat-basic"></a>
 
-    <!-- sekcja treat-description -->
+    <!-- section treat-description -->
     <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <section class="wrap-treat-desc">
       <span class="title">ZABIEGI NA TWARZ</span>
